# Millepede_test

./: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt  main.cpp  plot_diff.py  steer_pede.txt
Mille/: CMakeLists.txt  Mille.cpp  PedeResReader.cpp  PedeResReader.hpp
src/: CMakeLists.txt  Detector.cpp  Detector.hpp  EventBuilder.cpp  EventBuilder.hpp
